# 3rdPersonShooter

./: BGMusic.cpp  BGMusic.h  BaseApplication.cpp  BaseApplication.h  BulletSound.cpp  BulletSound.h  CMakeCache.txt  GameEnums.h  GameObject.cpp  GameObject.h  Level.cpp  Level.h  Makefile  Makefile.am  Makefile.in  Monster.cpp  Monster.h  MonsterSound.cpp  MonsterSound.h  Player.cpp  Player.h  README  README.md  Simulator.cpp  Simulator.h  Tile.cpp  Tile.h  Weapon.cpp  Weapon.h  WeaponSound.cpp  WeaponSound.h  cleanit  config.status  configure  configure.ac  libtool  ogre.cfg  plugins.cfg  resources.cfg
.deps/: OgreApp-BaseApplication.Po  OgreApp-GameObject.Po  OgreApp-Level.Po  OgreApp-Simulator.Po  OgreApp-Tile.Po
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
media/layouts/: scoreboard.layout
media/materials/scripts/: Racquetball.material  Racquetball.material~  aMazeBalls.material
media/media/materials/scripts/: aMazeBalls.material
media/models/: star.mesh
